--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,11 @@ jobs:
         run: go generate ./...
         working-directory: tools
 
+      - name: Check documentation
+        run: |
+          [[ "$(git diff docs/ | wc -l)" -lt 1 ]]
+        shell: bash
+
   lint:
 
     name: Lint
