--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,6 +57,9 @@ jobs:
       - name: Check formatting
         run: test -z "$(gofmt -l .)"
 
+      - name: Lint newlines
+        uses: fionn/newline-linter@v1.0.1
+
       - name: Lint
         uses: golangci/golangci-lint-action@v7
         with:
